prom-templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prom
spec:
  replicas: 1
  template:
    metadata:
      name: prom
      labels:
        app: prom
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.12.0
        ports:
        - name: webui
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /
            port: 9090
            scheme: HTTP
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 500m
            memory: 2Gi
        volumeMounts:
        - name: prometheus-storage-volume
          mountPath: /data/
      shareProcessNamespace: true
      volumes:
        - name: prometheus-storage-volume
          emptyDir: {}
