prom-templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prom
  namespace: prom-test
spec:
  to:
    kind: Service
    name: prom
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
